--- a/.github/workflows/ai_trend_publisher.yml
+++ b/.github/workflows/ai_trend_publisher.yml
@@ -2,8 +2,8 @@ name: AI Trend Monitoring and Publishing
 
 on:
   schedule:
-    # Run daily at 9 AM UTC
-    - cron: '0 9 * * *'
+    # Run every minute for testing (will be changed back to daily later)
+    - cron: '* * * * *'
   workflow_dispatch: # Allow manual triggering
 
 jobs:
@@ -40,12 +40,15 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add .
-          if [ -n "$(git status --porcelain)" ]; then
-            git commit -m "AI Trend Analysis: Daily automated post [skip ci]"
+          
+          # Add only the new posts
+          git add _posts/
+          
+          if [ -n "$(git status --porcelain _posts/)" ]; then
+            git commit -m "AI Trend Analysis: 3 new articles [skip ci]"
             git push
           else
-            echo "No changes to commit"
+            echo "No new posts to commit"
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
