--- a/.github/workflows/ai_trend_publisher.yml
+++ b/.github/workflows/ai_trend_publisher.yml
@@ -2,8 +2,8 @@ name: AI Trend Monitoring and Publishing
 
 on:
   schedule:
-    # Run every minute for testing (will be changed back to daily later)
-    - cron: '* * * * *'
+    # Run daily at 9 AM UTC
+    - cron: '0 9 * * *'
   workflow_dispatch: # Allow manual triggering
 
 jobs:
